<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>ca.footeware</groupId>
	<artifactId>flatpak-maven-plugin</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>maven-plugin</packaging>
	
	<name>${project.artifactId}</name>
	<description>Generate Flatpak artifacts for flatpak-builder</description>
	
	<properties>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<url>https://github.com/CraigFoote/flatpak-maven-plugin</url>
	
	<organization>
		<name>Footeware.ca</name>
		<url>https://footeware.ca</url>
	</organization>
	
	<licenses>
		<license>
			<name>Apache License Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<inceptionYear>2025</inceptionYear>
	
	<scm>
		<url>https://github.com/CraigFoote/flatpak-maven-plugin</url>
		<connection>scm:git:https://github.com/CraigFoote/flatpak-maven-plugin.git</connection>
		<developerConnection>scm:git:https://github.com/CraigFoote/flatpak-maven-plugin.git</developerConnection>
	</scm>
	
	<developers>
		<developer>
			<id>CraigFoote</id>
			<name>Craig Foote</name>
			<email>CraigFoote@gmail.com</email>
		</developer>
	</developers>
	
	<distributionManagement>
		<snapshotRepository>
			<id>oss.sonatype.snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>oss.sonatype.staging</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	
	<dependencies>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-core</artifactId>
			<version>4.0.0-rc-3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.codehaus.plexus</groupId>
			<artifactId>plexus-java</artifactId>
			<version>1.5.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>4.0.0-rc-3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugin-tools</groupId>
			<artifactId>maven-plugin-annotations</artifactId>
			<version>4.0.0-beta-1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-artifact</artifactId>
			<version>4.0.0-rc-3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-project</artifactId>
			<version>2.2.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-yaml</artifactId>
			<version>2.14.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
			<version>2.14.2</version>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<doclint>none</doclint> <!-- TODO javadocs -->
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
<!--			<plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-gpg-plugin</artifactId>-->
<!--				<version>3.2.7</version>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>sign-artifacts</id>-->
<!--						<phase>verify</phase>-->
<!--						<goals>-->
<!--							<goal>sign</goal>-->
<!--						</goals>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
<!--			<plugin>-->
<!--				<groupId>org.sonatype.central</groupId>-->
<!--				<artifactId>central-publishing-maven-plugin</artifactId>-->
<!--				<version>0.7.0</version>-->
<!--				<extensions>true</extensions>-->
<!--				<configuration>-->
<!--					<publishingServerId>central</publishingServerId>-->
<!--				</configuration>-->
<!--			</plugin>-->
<!--			<plugin>-->
<!--				<groupId>org.sonatype.plugins</groupId>-->
<!--				<artifactId>nexus-staging-maven-plugin</artifactId>-->
<!--				<version>1.7.0</version>-->
<!--				<extensions>true</extensions>-->
<!--				<configuration>-->
<!--					<serverId>oss.sonatype.snapshots</serverId>-->
<!--					<nexusUrl>https://oss.sonatype.org</nexusUrl>-->
<!--					<autoReleaseAfterClose>true</autoReleaseAfterClose>-->
<!--				</configuration>-->
<!--			</plugin>-->
		</plugins>
	</build>
	
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-plugin-plugin</artifactId>
				<version>4.0.0-beta-1</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-api-annotations</artifactId>
				<version>4.0.0-rc-3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-api-metadata</artifactId>
				<version>4.0.0-rc-3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-api-model</artifactId>
				<version>4.0.0-rc-3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-api-plugin</artifactId>
				<version>4.0.0-rc-3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-api-settings</artifactId>
				<version>4.0.0-rc-3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-api-toolchain</artifactId>
				<version>4.0.0-rc-3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-api-xml</artifactId>
				<version>4.0.0-rc-3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-support</artifactId>
				<version>4.0.0-rc-3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-xml</artifactId>
				<version>4.0.0-rc-3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-model</artifactId>
				<version>4.0.0-rc-3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-repository-metadata</artifactId>
				<version>4.0.0-rc-3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-settings</artifactId>
				<version>4.0.0-rc-3</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-xml-impl</artifactId>
				<version>4.0.0-alpha-9</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-profile</artifactId>
				<version>2.2.1</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-artifact-manager</artifactId>
				<version>2.2.1</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-plugin-registry</artifactId>
				<version>2.2.1</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
